# Candor

./: Bug_Reporting_Guide.md  CONTRIBUTING.md  DEVELOPMENT.md  Function_Calling_Guide.md  README.md  insights-plan.md
Android/: .gitignore  README.md
Android/src/: settings.gradle.kts
Android/src/app/: build.gradle.kts
Android/src/app/src/androidTest/java/com/google/ai/edge/gallery/data/recovery/: EntryDaoTest.kt
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/cpp/: CMakeLists.txt  native_embedding_bridge.cpp
Android/src/app/src/main/java/com/google/ai/edge/gallery/: CheckInSerializer.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/data/: CheckInRepository.kt  DataStoreRepository.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/data/recovery/: Entry.kt  EntryDao.kt  EntryEmbedding.kt  EntryEmbeddingDao.kt  EntryEmbeddingRepository.kt  EntryRepository.kt  Insight.kt  InsightDao.kt  InsightRepository.kt  LiteRtCompiledEmbeddingRuntime.kt  PromptFormatter.kt  RecoveryAnalysisService.kt  RecoveryAnalysisState.kt  RecoveryAnalysisStateDao.kt  RecoveryAnalysisStateRepository.kt  RecoveryDatabase.kt  RecoveryEmbeddingRuntime.kt  SentencePieceBridge.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/di/: AppModule.kt  DatabaseModule.kt  RecoveryModule.kt
Android/src/app/src/main/proto/: checkin.proto
Android/src/app/src/main/res/values/: strings.xml
Android/src/gradle/: libs.versions.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_HISTORY.md
model_allowlists/: 1_0_12.json
(+12 files in other folders)
